<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Targil2</string>
    <string name="action_settings">Settings</string>
    <string name="Add_grades">To add grades press: </string>
    <string name="lab">LAB GRADES</string>
    <string name="add">Add</string>
    <string name="sub_grades">To get sub grades of an exercise enter ID and exercise number</string>
    <string name="ID">ID:</string>
    <string name="EX_NUM">EX number:</string>
    <string name="get_sub">Get sub grades</string>
    <string name="all_grades_id">To get all grades of specific student enter his ID and press Get</string>
    <string name="get">Get</string>
    <string name="all_avg">To get average grade of all exercises press</string>
    <string name="all_avg_b">Get average</string>
    <string name="here">here</string>
    <string name="down_db">To download DB press:</string>
    <string name="download">Download</string>
    <string name="title_activity_add_grades">Add_grades</string>
    <string name="add_head">Adding grades</string>
    <string name="title_activity_sub_grades">Sub_grades</string>
    <string name="title_activity_id_grades">ID_grades</string>
    <string name="title_activity_avg_grades">Avg_grades</string>
    <string name="tb_ex">EX</string>
    <string name="tb_avg">AVERAGE</string>
    <string name="tb_st">STUDENTS</string>
    <string name="title_activity_download__db">Download_DB</string>

</resources>
