<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Add_grades" >

     <TextView
         android:id="@+id/textViewex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:text="@string/EX_NUM" />
     <TextView
            android:id="@+id/textViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewex"
            android:layout_marginTop="20dp"
            android:text="@string/ID"  />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/add_head"
        android:textSize="20sp"
        android:textColor="#3f4530" />

    <EditText
        android:id="@+id/editTextEx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewex"
        android:layout_alignBottom="@+id/textViewex"
        android:layout_alignLeft="@+id/textView1"
        android:ems="4"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewId"
        android:layout_alignBottom="@+id/textViewId"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/textViewId"
        android:ems="8"
        android:inputType="number" />

    <LinearLayout
        android:id="@+id/parentLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/textViewId"
        android:layout_below="@+id/textViewId"
        android:layout_above="@+id/buttonAdd"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/add" 
        android:onClick="addGrades"/>

</RelativeLayout>
